Fix layout on small screens.

--- a/content/src/welcome.less
+++ b/content/src/welcome.less
@@ -31,12 +31,3 @@ body { background: url(src/shavings.jpg) }
 .topline {
   border-top:1px solid #eee;
 }
-.row {
-  display: table;
-}
-
-[class*="col-"] {
-  float: none;
-  display: table-cell;
-  vertical-align: top;
-}
